# your option) any later version.
#
# StarPU is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
# See the GNU Lesser General Public License in COPYING.LGPL for more details.
#

StarPU 1.2.5 (git revision xxx)
==============================================

StarPU 1.2.4 (git revision 255cf98175ef462749780f30bfed21452b74b594)
==============================================

Small features:
   * Catch of signals SIGINT and SIGSEGV to dump fxt trace files.
   * New configure option --disable-icc to disable the compilation of
     specific ICC examples
   * Add starpu_codelet_pack_arg_init, starpu_codelet_pack_arg,
     starpu_codelet_pack_arg_fini for more fine-grain packing capabilities.
   * Add starpu_task_insert_data_make_room,
     starpu_task_insert_data_process_arg,
     starpu_task_insert_data_process_array_arg,
     starpu_task_insert_data_process_mode_array_arg
   * Do not show internal tasks in fxt dag by default. Allow to hide
     acquisitions too.
   * Add a way to choose the dag.dot colors.

StarPU 1.2.3 (svn revision 22444)
==============================================

New features:
  * Add per-node MPI data.

Small features:
  * When debug is enabled, starpu data accessors first check the
    validity of the data interface type
  * Print disk bus performances when STARPU_BUS_STATS is set
  * Add starpu_vector_filter_list_long filter.
  * Data interfaces now define a name through the struct starpu_data_interface_ops
  * StarPU-MPI :
    - allow predefined data interface not to define a mpi datatype and
      to be exchanged through pack/unpack operations
    - New function starpu_mpi_comm_get_attr() which allows to return
      the value of the attribute STARPU_MPI_TAG_UB, i.e the upper
      bound for tag value.
    - New configure option enable-mpi-verbose to manage the display of
      extra MPI debug messages.